# 2022-plutus-project

./: README.md
version-01-00/: README.md  cabal.project  cdp2022-plutus-project.cabal  hie.yaml
version-01-00/presentation/: Assoc-endpoints.md  PlutusTestv10outcome-breakdown.md  PlutusTestv10outcome-full.md
version-01-00/src/: PlutusTestv10clean.hs
version-01-00/src/Apps/: CtMarketPlace.hs  CtMintShop.hs  CtOracleCore.hs  CtOracleSwap.hs  CtSchema.hs  Utils.hs
