Cabal-Version:       2.4
Name:                cdp2022-plutus-project
Version:             0.1.0.0
Author:              Lim Chee Twang
Maintainer:          ctlimctlim@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Ct Lim
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:   PlutusTestv10clean
                     , Apps.CtSchema
                     , Apps.CtMintShop
                     , Apps.CtMarketPlace
                     , Apps.CtOracleSwap
                     , Apps.CtOracleCore
                     , Apps.Utils
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , cardano-crypto-class                     
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-use-cases
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-pab
                     , openapi3
                     , prettyprinter
                     , serialise
                     , text
                     , lens
                     , hashable
                     , freer-extras
                     , charset
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise  -fplugin-opt PlutusTx.Plugin:defer-errors


